--- a/css/index.scss.css
+++ b/css/index.scss.css
@@ -48,8 +48,7 @@ body {
       text-align: center;
       color: white;
       font-size: 4em;
-      font-weight: 400;
-      padding: 0 5em; }
+      font-weight: 400; }
     body .section p {
       color: #f6c566;
       font-size: 1.5em;
@@ -201,9 +200,8 @@ body {
       margin: 0 0 50px 0;
       text-align: center;
       color: #f48637;
-      font-size: 4em;
-      font-weight: 400;
-      padding: 0 5em; }
+      font-size: 3em;
+      font-weight: 400; }
     body .section7 p {
       color: #045121;
       font-size: 1.5em;
