--- a/css/web.scss
+++ b/css/web.scss
@@ -26,7 +26,9 @@ body{
     .nav-link{
       font-weight: bold;
       margin-right: 10px;
-      color: $secondary-green !important;
+    }
+    .active{
+      color: $primary-red !important;
     }
   }
   .section{
